--- a/portal-frontend/src/app/features/edit-application/primary-contact/primary-contact.component.html
+++ b/portal-frontend/src/app/features/edit-application/primary-contact/primary-contact.component.html
@@ -96,10 +96,10 @@
 <div class="button-container">
   <button (click)="onSaveExit()" mat-stroked-button color="accent">Save and Exit</button>
   <div>
-    <button (click)="onSave()" mat-stroked-button matStepperPrevious color="primary">
+    <button mat-stroked-button matStepperPrevious color="primary">
       Previous<span class="mobile-hidden"> Step</span>
     </button>
-    <button (click)="onSave()" mat-flat-button matStepperNext color="primary">
+    <button mat-flat-button matStepperNext color="primary">
       Next<span class="mobile-hidden"> Step</span>
     </button>
   </div>
