--- a/portal-frontend/src/app/features/edit-application/select-government/select-government.component.html
+++ b/portal-frontend/src/app/features/edit-application/select-government/select-government.component.html
@@ -26,6 +26,10 @@
           </mat-option>
         </mat-autocomplete>
       </mat-form-field>
+      <div *ngIf="localGovernment.invalid && (localGovernment.dirty || localGovernment.touched)" class="field-error">
+        <mat-icon>warning</mat-icon>
+        <div *ngIf="localGovernment.errors?.['required']">This field is required</div>
+      </div>
     </div>
   </div>
 </form>
