--- a/portal-frontend/src/app/features/edit-application/land-use/land-use.component.html
+++ b/portal-frontend/src/app/features/edit-application/land-use/land-use.component.html
@@ -22,7 +22,7 @@
         </label>
         <mat-form-field class="display-block" appearance="outline">
           <textarea
-            #parcelsAgricultureDescription
+            #parcelsAgricultureDescriptionText
             id="parcelsAgricultureDescription"
             matInput
             name="questionText"
@@ -30,7 +30,17 @@
             rows="4"
           ></textarea>
         </mat-form-field>
-        <span class="subtext">Characters left: {{ 4000 - parcelsAgricultureDescription.textLength }}</span>
+        <span class="subtext">Characters left: {{ 4000 - parcelsAgricultureDescriptionText.textLength }}</span>
+        <div
+          *ngIf="
+            parcelsAgricultureDescription.invalid &&
+            (parcelsAgricultureDescription.dirty || parcelsAgricultureDescription.touched)
+          "
+          class="field-error"
+        >
+          <mat-icon>warning</mat-icon>
+          <div *ngIf="parcelsAgricultureDescription.errors?.['required']">This field is required</div>
+        </div>
       </div>
       <div class="full-row">
         <h6>
@@ -40,7 +50,7 @@
         </h6>
         <mat-form-field class="display-block" appearance="outline">
           <textarea
-            #parcelsAgricultureImprovementDescription
+            #parcelsAgricultureImprovementDescriptionText
             id="parcelsAgricultureImprovementDescription"
             matInput
             name="questionText"
@@ -48,7 +58,19 @@
             rows="4"
           ></textarea>
         </mat-form-field>
-        <span class="subtext">Characters left: {{ 4000 - parcelsAgricultureImprovementDescription.textLength }}</span>
+        <span class="subtext"
+          >Characters left: {{ 4000 - parcelsAgricultureImprovementDescriptionText.textLength }}</span
+        >
+        <div
+          *ngIf="
+            parcelsAgricultureImprovementDescription.invalid &&
+            (parcelsAgricultureImprovementDescription.dirty || parcelsAgricultureImprovementDescription.touched)
+          "
+          class="field-error"
+        >
+          <mat-icon>warning</mat-icon>
+          <div *ngIf="parcelsAgricultureImprovementDescription.errors?.['required']">This field is required</div>
+        </div>
       </div>
       <div class="full-row">
         <label for="parcelsNonAgricultureUseDescription">
@@ -56,7 +78,7 @@
         </label>
         <mat-form-field class="display-block" appearance="outline">
           <textarea
-            #parcelsNonAgricultureUseDescription
+            #parcelsNonAgricultureUseDescriptionText
             id="parcelsNonAgricultureUseDescription"
             matInput
             name="questionText"
@@ -64,7 +86,17 @@
             rows="4"
           ></textarea>
         </mat-form-field>
-        <span class="subtext">Characters left: {{ 4000 - parcelsNonAgricultureUseDescription.textLength }}</span>
+        <span class="subtext">Characters left: {{ 4000 - parcelsNonAgricultureUseDescriptionText.textLength }}</span>
+        <div
+          *ngIf="
+            parcelsNonAgricultureUseDescription.invalid &&
+            (parcelsNonAgricultureUseDescription.dirty || parcelsNonAgricultureUseDescription.touched)
+          "
+          class="field-error"
+        >
+          <mat-icon>warning</mat-icon>
+          <div *ngIf="parcelsNonAgricultureUseDescription.errors?.['required']">This field is required</div>
+        </div>
       </div>
     </div>
     <h5>Identify the land uses surrounding the parcel(s) under application.</h5>
@@ -72,84 +104,168 @@
       <div class="full-row">
         <label for="northLandUseType">North</label>
         <div class="land-use-type-wrapper">
-          <mat-form-field class="land-use-type">
-            <mat-select id="northLandUseType" placeholder="Main Land Use Type" formControlName="northLandUseType">
-              <mat-option *ngFor="let enum of MainLandUseTypeOptions | keyvalue" [value]="enum.value">{{
-                enum.value
-              }}</mat-option>
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field appearance="outline" class="full-width-input">
-            <input
-              id="northLandUseTypeDescription"
-              placeholder="Specific Activity"
-              matInput
-              formControlName="northLandUseTypeDescription"
-            />
-          </mat-form-field>
+          <div class="land-use-type">
+            <mat-form-field appearance='outline'>
+              <mat-select id="northLandUseType" placeholder="Main Land Use Type" formControlName="northLandUseType">
+                <mat-option *ngFor="let enum of MainLandUseTypeOptions | keyvalue" [value]="enum.value">{{
+                  enum.value
+                }}</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <div
+              *ngIf="northLandUseType.invalid && (northLandUseType.dirty || northLandUseType.touched)"
+              class="field-error"
+            >
+              <mat-icon>warning</mat-icon>
+              <div *ngIf="northLandUseType.errors?.['required']">This field is required</div>
+            </div>
+          </div>
+          <div class="full-width-input">
+            <mat-form-field appearance="outline">
+              <input
+                id="northLandUseTypeDescription"
+                placeholder="Specific Activity"
+                matInput
+                formControlName="northLandUseTypeDescription"
+              />
+            </mat-form-field>
+            <div
+              *ngIf="
+                northLandUseTypeDescription.invalid &&
+                (northLandUseTypeDescription.dirty || northLandUseTypeDescription.touched)
+              "
+              class="field-error"
+            >
+              <mat-icon>warning</mat-icon>
+              <div *ngIf="northLandUseTypeDescription.errors?.['required']">This field is required</div>
+            </div>
+          </div>
         </div>
       </div>
 
       <div class="full-row">
         <label for="eastLandUseType">East</label>
         <div class="land-use-type-wrapper">
-          <mat-form-field class="land-use-type">
-            <mat-select id="eastLandUseType" placeholder="Main Land Use Type" formControlName="eastLandUseType">
-              <mat-option *ngFor="let enum of MainLandUseTypeOptions | keyvalue" [value]="enum.value">{{
-                enum.value
-              }}</mat-option>
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field appearance="outline" class="full-width-input">
-            <input
-              id="eastLandUseTypeDescription"
-              placeholder="Specific Activity"
-              matInput
-              formControlName="eastLandUseTypeDescription"
-            />
-          </mat-form-field>
+          <div class="land-use-type">
+            <mat-form-field appearance='outline'>
+              <mat-select id="eastLandUseType" placeholder="Main Land Use Type" formControlName="eastLandUseType">
+                <mat-option *ngFor="let enum of MainLandUseTypeOptions | keyvalue" [value]="enum.value">{{
+                  enum.value
+                }}</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <div
+              *ngIf="eastLandUseType.invalid && (eastLandUseType.dirty || eastLandUseType.touched)"
+              class="field-error"
+            >
+              <mat-icon>warning</mat-icon>
+              <div *ngIf="eastLandUseType.errors?.['required']">This field is required</div>
+            </div>
+          </div>
+          <div class="full-width-input">
+            <mat-form-field appearance="outline">
+              <input
+                id="eastLandUseTypeDescription"
+                placeholder="Specific Activity"
+                matInput
+                formControlName="eastLandUseTypeDescription"
+              />
+            </mat-form-field>
+            <div
+              *ngIf="
+                eastLandUseTypeDescription.invalid &&
+                (eastLandUseTypeDescription.dirty || eastLandUseTypeDescription.touched)
+              "
+              class="field-error"
+            >
+              <mat-icon>warning</mat-icon>
+              <div *ngIf="eastLandUseTypeDescription.errors?.['required']">This field is required</div>
+            </div>
+          </div>
         </div>
       </div>
 
       <div class="full-row">
         <label for="southLandUseType">South</label>
         <div class="land-use-type-wrapper">
-          <mat-form-field class="land-use-type">
-            <mat-select id="southLandUseType" placeholder="Main Land Use Type" formControlName="southLandUseType">
-              <mat-option *ngFor="let enum of MainLandUseTypeOptions | keyvalue" [value]="enum.value">{{
-                enum.value
-              }}</mat-option>
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field appearance="outline" class="full-width-input">
-            <input
-              id="southLandUseTypeDescription"
-              placeholder="Specific Activity"
-              matInput
-              formControlName="southLandUseTypeDescription"
-            />
-          </mat-form-field>
+          <div class="land-use-type">
+            <mat-form-field appearance='outline'>
+              <mat-select id="southLandUseType" placeholder="Main Land Use Type" formControlName="southLandUseType">
+                <mat-option *ngFor="let enum of MainLandUseTypeOptions | keyvalue" [value]="enum.value">{{
+                  enum.value
+                }}</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <div
+              *ngIf="southLandUseType.invalid && (southLandUseType.dirty || southLandUseType.touched)"
+              class="field-error"
+            >
+              <mat-icon>warning</mat-icon>
+              <div *ngIf="southLandUseType.errors?.['required']">This field is required</div>
+            </div>
+          </div>
+          <div class="full-width-input">
+            <mat-form-field appearance="outline">
+              <input
+                id="southLandUseTypeDescription"
+                placeholder="Specific Activity"
+                matInput
+                formControlName="southLandUseTypeDescription"
+              />
+            </mat-form-field>
+            <div
+              *ngIf="
+                southLandUseTypeDescription.invalid &&
+                (southLandUseTypeDescription.dirty || southLandUseTypeDescription.touched)
+              "
+              class="field-error"
+            >
+              <mat-icon>warning</mat-icon>
+              <div *ngIf="southLandUseTypeDescription.errors?.['required']">This field is required</div>
+            </div>
+          </div>
         </div>
       </div>
 
       <div class="full-row">
         <label for="westLandUseType">West</label>
         <div class="land-use-type-wrapper">
-          <mat-form-field class="land-use-type">
-            <mat-select id="westLandUseType" placeholder="Main Land Use Type" formControlName="westLandUseType">
-              <mat-option *ngFor="let enum of MainLandUseTypeOptions | keyvalue" [value]="enum.value">{{
-                enum.value
-              }}</mat-option>
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field appearance="outline" class="full-width-input">
-            <input
-              id="westLandUseTypeDescription"
-              placeholder="Specific Activity"
-              matInput
-              formControlName="westLandUseTypeDescription"
-            />
-          </mat-form-field>
+          <div class="land-use-type">
+            <mat-form-field appearance='outline'>
+              <mat-select id="westLandUseType" placeholder="Main Land Use Type" formControlName="westLandUseType">
+                <mat-option *ngFor="let enum of MainLandUseTypeOptions | keyvalue" [value]="enum.value">{{
+                  enum.value
+                }}</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <div
+              *ngIf="westLandUseType.invalid && (westLandUseType.dirty || westLandUseType.touched)"
+              class="field-error"
+            >
+              <mat-icon>warning</mat-icon>
+              <div *ngIf="westLandUseType.errors?.['required']">This field is required</div>
+            </div>
+          </div>
+          <div class="full-width-input">
+            <mat-form-field appearance="outline">
+              <input
+                id="westLandUseTypeDescription"
+                placeholder="Specific Activity"
+                matInput
+                formControlName="westLandUseTypeDescription"
+              />
+            </mat-form-field>
+            <div
+              *ngIf="
+                westLandUseTypeDescription.invalid &&
+                (westLandUseTypeDescription.dirty || westLandUseTypeDescription.touched)
+              "
+              class="field-error"
+            >
+              <mat-icon>warning</mat-icon>
+              <div *ngIf="westLandUseTypeDescription.errors?.['required']">This field is required</div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
