--- a/portal-frontend/src/app/features/edit-application/other-attachments/other-attachments.component.html
+++ b/portal-frontend/src/app/features/edit-application/other-attachments/other-attachments.component.html
@@ -9,57 +9,85 @@
 </p>
 <section>
   <h4>Optional Attachments (Max. 100 MB per attachment)</h4>
-  <div class="scrollable">
-    <table mat-table [dataSource]="otherFiles">
-      <ng-container matColumnDef="type">
-        <th mat-header-cell *matHeaderCellDef>Type</th>
-        <td mat-cell *matCellDef="let element">
-          <mat-form-field appearance="outline">
-            <mat-select
-              [value]="element.type"
-              (valueChange)="onChangeType(element.uuid, $event)"
-              placeholder="Select a type"
+  <form [formGroup]="form">
+    <div class="scrollable">
+      <table mat-table [dataSource]="otherFiles">
+        <ng-container matColumnDef="type">
+          <th mat-header-cell *matHeaderCellDef>Type</th>
+          <td mat-cell *matCellDef="let element">
+            <mat-form-field appearance="outline">
+              <mat-select
+                [formControlName]="element.uuid + '-type'"
+                (valueChange)="onChangeType(element.uuid, $event)"
+                placeholder="Select a type"
+              >
+                <mat-option *ngFor="let type of selectableTypes" [value]="type">{{ type }}</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <div
+              *ngIf="
+                form.controls[element.uuid + '-type']!.invalid &&
+                (form.controls[element.uuid + '-type']!.dirty ||
+                  form.controls[element.uuid + '-type']!.touched)
+              "
+              class="field-error"
             >
-              <mat-option *ngFor="let type of selectableTypes" [value]="type">{{ type }}</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </td>
-      </ng-container>
+              <mat-icon>warning</mat-icon>
+              <div *ngIf="form.controls[element.uuid + '-type']!.errors?.['required']">
+                This field is required
+              </div>
+            </div>
+          </td>
+        </ng-container>
 
-      <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef>Description</th>
-        <td mat-cell *matCellDef="let element">
-          <mat-form-field appearance="outline">
-            <input
-              [value]="element.description"
-              (change)="onChangeDescription(element.uuid, $event)"
-              id="fileType"
-              type="text"
-              matInput
-              placeholder="Type description"
-            />
-          </mat-form-field>
-        </td>
-      </ng-container>
+        <ng-container matColumnDef="description">
+          <th mat-header-cell *matHeaderCellDef>Description</th>
+          <td mat-cell *matCellDef="let element">
+            <mat-form-field appearance="outline">
+              <input
+                [formControlName]="element.uuid + '-description'"
+                (change)="onChangeDescription(element.uuid, $event)"
+                id="fileType"
+                type="text"
+                matInput
+                placeholder="Type description"
+              />
+            </mat-form-field>
+            <div
+              *ngIf="
+                form.controls[element.uuid + '-description']!.invalid &&
+                (form.controls[element.uuid + '-description']!.dirty ||
+                  form.controls[element.uuid + '-description']!.touched)
+              "
+              class="field-error"
+            >
+              <mat-icon>warning</mat-icon>
+              <div *ngIf="form.controls[element.uuid + '-description']!.errors?.['required']">
+                This field is required
+              </div>
+            </div>
+          </td>
+        </ng-container>
 
-      <ng-container matColumnDef="fileName">
-        <th mat-header-cell *matHeaderCellDef>File Name</th>
-        <td mat-cell *matCellDef="let element">
-          <a (click)="openFile(element.uuid)">{{ element.fileName }}</a>
-        </td>
-      </ng-container>
+        <ng-container matColumnDef="fileName">
+          <th mat-header-cell *matHeaderCellDef>File Name</th>
+          <td mat-cell *matCellDef="let element">
+            <a (click)="openFile(element.uuid)">{{ element.fileName }}</a>
+          </td>
+        </ng-container>
 
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef>Action</th>
-        <td mat-cell class="actions" *matCellDef="let element">
-          <button (click)="onRemoveFile(element.uuid)" mat-stroked-button color="accent">Remove</button>
-        </td>
-      </ng-container>
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef>Action</th>
+          <td mat-cell class="actions" *matCellDef="let element">
+            <button (click)="onRemoveFile(element.uuid)" mat-stroked-button color="accent">Remove</button>
+          </td>
+        </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-  </div>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+    </div>
+  </form>
   <div class="uploader">
     <app-file-drag-drop (uploadFiles)="attachFile($event)"></app-file-drag-drop>
   </div>
