--- a/portal-frontend/src/app/features/edit-application/parcel-details/application-owner-dialog/application-owner-dialog.component.scss
+++ b/portal-frontend/src/app/features/edit-application/parcel-details/application-owner-dialog/application-owner-dialog.component.scss
@@ -5,3 +5,12 @@
     margin-right: rem(8) !important;
   }
 }
+
+.field-error {
+  color: $error-color;
+  font-size: rem(15);
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  margin-top: rem(4);
+}
