--- a/portal-frontend/src/app/features/edit-application/primary-contact/primary-contact.component.html
+++ b/portal-frontend/src/app/features/edit-application/primary-contact/primary-contact.component.html
@@ -32,12 +32,20 @@
           <mat-form-field appearance="outline">
             <input id="firstName" matInput placeholder="Enter First Name" formControlName="firstName" />
           </mat-form-field>
+          <div *ngIf="firstName.invalid && (firstName.dirty || firstName.touched)" class="field-error">
+            <mat-icon>warning</mat-icon>
+            <div *ngIf="firstName.errors?.['required']">This field is required</div>
+          </div>
         </div>
         <div>
           <label for="lastName">Last Name</label>
           <mat-form-field appearance="outline">
             <input id="lastName" matInput placeholder="Enter Last Name" formControlName="lastName" />
           </mat-form-field>
+          <div *ngIf="lastName.invalid && (lastName.dirty || lastName.touched)" class="field-error">
+            <mat-icon>warning</mat-icon>
+            <div *ngIf="lastName.errors?.['required']">This field is required</div>
+          </div>
         </div>
         <div class="full-row">
           <label for="orgName">Organization Name (Optional)</label>
@@ -52,16 +60,27 @@
               id="phoneNumber"
               mask="(000) 000-0000"
               matInput
+              maxlength='14'
               placeholder="(555) 555-5555"
               formControlName="phoneNumber"
             />
           </mat-form-field>
+          <div *ngIf="phoneNumber.invalid && (phoneNumber.dirty || phoneNumber.touched)" class="field-error">
+            <mat-icon>warning</mat-icon>
+            <div *ngIf="phoneNumber.errors?.['required']">This field is required</div>
+            <div *ngIf="phoneNumber.errors?.['mask']">Invalid format</div>
+          </div>
         </div>
         <div>
           <label for="firstName">Email</label>
           <mat-form-field appearance="outline">
             <input id="email" type="email" matInput placeholder="Enter Email" formControlName="email" />
           </mat-form-field>
+          <div *ngIf="email.invalid && (email.dirty || email.touched)" class="field-error">
+            <mat-icon>warning</mat-icon>
+            <div *ngIf="email.errors?.['required']">This field is required</div>
+            <div *ngIf="email.errors?.['email']">Invalid format</div>
+          </div>
         </div>
       </div>
     </form>
@@ -99,8 +118,6 @@
     <button mat-stroked-button matStepperPrevious color="primary">
       Previous<span class="mobile-hidden"> Step</span>
     </button>
-    <button mat-flat-button matStepperNext color="primary">
-      Next<span class="mobile-hidden"> Step</span>
-    </button>
+    <button mat-flat-button matStepperNext color="primary">Next<span class="mobile-hidden"> Step</span></button>
   </div>
 </div>
