Add L/FNG Page to ALCS
* Add column to store application review
* Add to application dto
* Add page to load / show the data

--- a/alcs-frontend/src/app/features/application/applicant-info/applicant-info.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/applicant-info.component.html
@@ -8,7 +8,7 @@
   <section>
     <app-document
       [fileNumber]="fileNumber"
-      documentType="certificateOfTitle"
+      [documentType]="DOCUMENT_TYPE.CERTIFICATE_OF_TITLE"
       title="Applicant Documents"
     ></app-document>
   </section>
