--- a/alcs-frontend/src/app/features/application/review/review.component.html
+++ b/alcs-frontend/src/app/features/application/review/review.component.html
@@ -10,5 +10,5 @@
   <app-decision-meeting [fileNumber]="fileNumber"></app-decision-meeting>
 </section>
 <section>
-  <app-document [fileNumber]="fileNumber" documentType="reviewDocument" title="Evidentiary Record"></app-document>
+  <app-document [fileNumber]="fileNumber" [documentType]="DOCUMENT_TYPE.REVIEW_DOCUMENT" title="Evidentiary Record"></app-document>
 </section>
