Code Review Feedback

--- a/portal-frontend/src/app/features/edit-application/land-use/land-use.component.html
+++ b/portal-frontend/src/app/features/edit-application/land-use/land-use.component.html
@@ -28,6 +28,7 @@
             name="questionText"
             formControlName="parcelsAgricultureDescription"
             rows="4"
+            maxlength='4000'
           ></textarea>
         </mat-form-field>
         <span class="subtext">Characters left: {{ 4000 - parcelsAgricultureDescriptionText.textLength }}</span>
@@ -56,6 +57,7 @@
             name="questionText"
             formControlName="parcelsAgricultureImprovementDescription"
             rows="4"
+            maxlength='4000'
           ></textarea>
         </mat-form-field>
         <span class="subtext"
@@ -84,6 +86,7 @@
             name="questionText"
             formControlName="parcelsNonAgricultureUseDescription"
             rows="4"
+            maxlength='4000'
           ></textarea>
         </mat-form-field>
         <span class="subtext">Characters left: {{ 4000 - parcelsNonAgricultureUseDescriptionText.textLength }}</span>
