--- a/portal-frontend/src/app/features/edit-application/other-parcels/other-parcels.component.html
+++ b/portal-frontend/src/app/features/edit-application/other-parcels/other-parcels.component.html
@@ -32,7 +32,7 @@
       <div class="full-row">
         <mat-expansion-panel
           *ngFor="let parcel of otherParcels; let parcelInd = index"
-          [expanded]="otherParcels.length < 2"
+          [expanded]="otherParcels.length < 2 || (newParcelAdded && parcelInd === otherParcels.length - 1)"
         >
           <mat-expansion-panel-header>
             <mat-panel-title> Parcel #{{ parcelInd + 1 }} Details</mat-panel-title>
@@ -83,12 +83,10 @@
   <div class="button-container">
     <button (click)="onSaveExit()" mat-stroked-button color="accent">Save and Exit</button>
     <div>
-      <button (click)="onSave()" mat-stroked-button matStepperPrevious color="primary">
+      <button mat-stroked-button matStepperPrevious color="primary">
         Previous<span class="mobile-hidden"> Step</span>
       </button>
-      <button (click)="onSave()" mat-flat-button matStepperNext color="primary">
-        Next<span class="mobile-hidden"> Step</span>
-      </button>
+      <button mat-flat-button matStepperNext color="primary">Next<span class="mobile-hidden"> Step</span></button>
     </div>
   </div>
 </section>
