disable search and reset, styling

--- a/portal-frontend/src/app/features/edit-application/other-parcels/other-parcels.component.html
+++ b/portal-frontend/src/app/features/edit-application/other-parcels/other-parcels.component.html
@@ -10,7 +10,7 @@
       <li>{{ owner.displayName }}</li>
     </ul>
 
-    <form [formGroup]="otherParcelsForm">
+    <form [formGroup]="otherParcelsForm" class="other-parcels-form">
       <div class="full-row">
         <div>
           <div for="hasOtherParcelsInCommunity">
