--- a/portal-frontend/src/app/features/edit-application/other-parcels/other-parcels.component.html
+++ b/portal-frontend/src/app/features/edit-application/other-parcels/other-parcels.component.html
@@ -1,15 +1,16 @@
 <section title="Other parcels">
   <h2>Other Parcels in the Community</h2>
   <div class="step-description">
-    <p>
+    <div>
       Identify all ownerships or leases of other lands (ALR or non-ALR) within the community where the parcel(s) under
       application are located and owned by the following owners:
-    </p>
-    <p>All fields are required unless stated optional.</p>
 
-    <ul *ngFor="let owner of owners">
-      <li>{{ owner.displayName }}</li>
-    </ul>
+      <ul>
+        <li *ngFor="let owner of owners">{{ owner.displayName }}</li>
+      </ul>
+    </div>
+
+    <p>All fields are required unless stated optional.</p>
 
     <form [formGroup]="otherParcelsForm" class="other-parcels-form">
       <div class="full-row">
