--- a/portal-frontend/src/app/features/edit-application/other-attachments/other-attachments.component.html
+++ b/portal-frontend/src/app/features/edit-application/other-attachments/other-attachments.component.html
@@ -27,15 +27,12 @@
             <div
               *ngIf="
                 form.controls[element.uuid + '-type']!.invalid &&
-                (form.controls[element.uuid + '-type']!.dirty ||
-                  form.controls[element.uuid + '-type']!.touched)
+                (form.controls[element.uuid + '-type']!.dirty || form.controls[element.uuid + '-type']!.touched)
               "
               class="field-error"
             >
               <mat-icon>warning</mat-icon>
-              <div *ngIf="form.controls[element.uuid + '-type']!.errors?.['required']">
-                This field is required
-              </div>
+              <div *ngIf="form.controls[element.uuid + '-type']!.errors?.['required']">This field is required</div>
             </div>
           </td>
         </ng-container>
@@ -95,11 +92,9 @@
 <div class="button-container">
   <button (click)="onSaveExit()" mat-stroked-button color="accent">Save and Exit</button>
   <div>
-    <button (click)="onSave()" mat-stroked-button matStepperPrevious color="primary">
+    <button mat-stroked-button matStepperPrevious color="primary">
       Previous<span class="mobile-hidden"> Step</span>
     </button>
-    <button (click)="onSave()" mat-flat-button matStepperNext color="primary">
-      Next<span class="mobile-hidden"> Step</span>
-    </button>
+    <button mat-flat-button matStepperNext color="primary">Next<span class="mobile-hidden"> Step</span></button>
   </div>
 </div>
