--- a/portal-frontend/src/app/features/edit-application/parcel-details/parcel-entry/parcel-entry.component.html
+++ b/portal-frontend/src/app/features/edit-application/parcel-details/parcel-entry/parcel-entry.component.html
@@ -25,8 +25,8 @@
           <input id="lookup-pid" matInput placeholder="Enter 9 digit PID" formControlName="pidPin" />
         </mat-form-field>
         <div class="search-buttons">
-          <button mat-stroked-button color="primary" (click)="onSearch()">Search</button>
-          <button mat-stroked-button color="accent" (click)="onReset()">Reset</button>
+          <button mat-stroked-button color="primary" (click)="onSearch()" [disabled]="_disabled">Search</button>
+          <button mat-stroked-button color="accent" (click)="onReset()" [disabled]="_disabled">Reset</button>
         </div>
       </div>
       <span class="float-right">Powered by PMBC!</span>
@@ -134,6 +134,7 @@
         placeholder="Type owner name"
         [matAutocomplete]="auto"
         (input)="onTypeOwner($event)"
+        [disabled]="_disabled"
       />
       <mat-autocomplete #auto="matAutocomplete">
         <mat-option (click)="onSelectOwner(option, option.isSelected)" *ngFor="let option of filteredOwners">
@@ -143,7 +144,7 @@
             <button *ngIf="option.isSelected" mat-stroked-button color="primary">Added</button>
           </div>
         </mat-option>
-        <mat-option class="option" *ngIf="filteredOwners.length === 0" (click)="onAddNewOwner()">
+        <mat-option class="option" *ngIf="filteredOwners.length === 0 && enableAddNewOwner" (click)="onAddNewOwner()">
           <div class="owner-option">
             <div>No owner matching search</div>
             <button mat-flat-button color="primary">Add new owner</button>
@@ -154,13 +155,23 @@
         </mat-option>
       </mat-autocomplete>
     </mat-form-field>
-    <button class="new-owner" (click)="onAddNewOwner()" mat-stroked-button color="primary">Add new owner</button>
+    <button
+      class="new-owner"
+      *ngIf="enableAddNewOwner"
+      (click)="onAddNewOwner()"
+      mat-stroked-button
+      color="primary"
+      [disabled]="_disabled"
+    >
+      Add new owner
+    </button>
     <div>
       <app-parcel-owners
         [parcelUuid]="parcel.uuid"
         [owners]="parcel.owners"
         (onOwnersUpdated)="onOwnersUpdated.emit()"
         (onOwnerRemoved)="onOwnerRemoved($event)"
+        [disabled]="_disabled"
       ></app-parcel-owners>
     </div>
   </section>
